charts/synapse/tests/golden/fixtures/test-admin-httproute.golden.yaml
---
# Source: synapse/templates/admin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse-admin
spec:
  parentRefs:
    - name: matrix-gateway
      namespace: gateway-system
  hostnames:
    - NOT-CONFIGURED
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: admin
          port: 80
